# opengl-learning-attempt2

./: .gitignore  CMakeLists.txt  README.md
src/: Shader.cpp  Shader.hpp  main.cpp  test.cpp
